@@ -2,6 +2,7 @@
 
 - Start/Stop buttons no longer reset current project.
 - Fixed parsing tags with taskw.
+- Support for task notes.
 
 
 2013/10/18
